# ObsidianizeFolders

./: .env  .env.example  .gitignore  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
delete/: obsidianize.db
delete/Users-mfanti-Documents-BehavioSec-AI/: Presentation.md  _index.md
delete/Users-mfanti-Documents-BehavioSec-AI/.claude/: _index.md  settings.local.md
delete/Users-mfanti-Documents-BehavioSec-AI/AIPreso/: _index.md  gen.md
delete/Users-mfanti-Documents-BehavioSec-AI/Demo/: README.md  _index.md  eslint.config.md  gemini.md  package-lock.md  package.md  tsconfig.app.md  tsconfig.md  tsconfig.node.md  vite.config.md
delete/Users-mfanti-Documents-BehavioSec-AI/auth0-react/: README.md  _index.md  eslint.config.md  package-lock.md  package.md  tsconfig.app.md  tsconfig.md  tsconfig.node.md  vite.config.md
delete/Users-mfanti-Documents-BehavioSec-AI/demo-stitch/: _index.md  design.md  designlogistics.md  designretail.md  download_stitch.md  package-lock.md  package.md  postcss.config.md  skills-lock.md  tailwind.config.md  tsconfig.app.md  tsconfig.md  tsconfig.node.md  validate.md  vite-env.d.md  vite.config.md
delete/Users-mfanti-Documents-BehavioSec-AI/demo-template/: AdvancedProf.md  ClaudePrompt.md  GeminiPrompt.md  _index.md  auth0.md  fp-clientlib-v6_0.md  package-lock.md  package.md  tsconfig.app.md  tsconfig.md  tsconfig.node.md  vite.config.md
src/obsidianize/: cli.py  config.py  db.py  imports.py  llm.py  notes.py  scanner.py  sync.py  validation.py
src/obsidianize/ui/: app.py
(+98 files in other folders)
